--- a/app/src/main/res/layout/user_item_design.xml
+++ b/app/src/main/res/layout/user_item_design.xml
@@ -14,6 +14,7 @@
         app:cardCornerRadius="@dimen/_25sdp">
 
         <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/cardBack"
