--- a/app/src/main/res/layout/activity_user_forget_password.xml
+++ b/app/src/main/res/layout/activity_user_forget_password.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:weightSum="10"
     android:background="@color/mainBack"
-    tools:context=".UserForgetPassword">
+    tools:context=".user.UserForgetPassword">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,10 +39,10 @@
             android:background="@drawable/yellow_rounded_corner">
 
             <EditText
-                android:id="@+id/ed1"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/username_icon"
+                android:layout_toRightOf="@+id/email_icon"
                 android:background="@android:color/transparent"
                 android:fontFamily="@font/ubuntu"
                 android:hint="Email"
@@ -55,7 +55,7 @@
                 android:textSize="@dimen/_15ssp" />
 
             <ImageView
-                android:id="@+id/username_icon"
+                android:id="@+id/email_icon"
                 android:layout_width="@dimen/_15sdp"
                 android:layout_height="@dimen/_15sdp"
                 android:layout_centerVertical="true"
@@ -72,7 +72,7 @@
             android:layout_marginRight="@dimen/_43sdp">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/re1"
+                android:id="@+id/resetButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/yellow_fill_rounded"
@@ -84,7 +84,7 @@
         </RelativeLayout>
 
         <ProgressBar
-            android:id="@+id/pp"
+            android:id="@+id/progressBar"
             android:layout_gravity="center"
             style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/_30sdp"
