--- a/app/src/main/res/layout/activity_user_selected_hospital.xml
+++ b/app/src/main/res/layout/activity_user_selected_hospital.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/mainBack"
     android:orientation="vertical"
-    tools:context=".UserSelectedHospitalActivity">
+    tools:context=".user.UserSelectedHospitalActivity">
 
     <TextView
         android:id="@+id/hospitalName"
