--- a/app/src/main/res/layout/activity_admin_forget_password.xml
+++ b/app/src/main/res/layout/activity_admin_forget_password.xml
@@ -7,7 +7,7 @@
     android:background="@color/mainBack"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".AdminForgetPassword">
+    tools:context=".admin.AdminForgetPassword">
 
     <LinearLayout
         android:layout_width="match_parent"
