--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/mainBack"
     android:weightSum="10"
-    tools:context=".AdminMainActivity">
+    tools:context=".admin.AdminMainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
