--- a/app/src/main/res/layout/activity_user_sign_in.xml
+++ b/app/src/main/res/layout/activity_user_sign_in.xml
@@ -7,7 +7,7 @@
     android:background="@color/mainBack"
     android:weightSum="10"
     android:orientation="vertical"
-    tools:context=".UserSignIn">
+    tools:context=".user.UserSignIn">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -107,7 +107,7 @@
             android:layout_marginRight="@dimen/_43sdp">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btlogin"
+                android:id="@+id/signIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/yellow_fill_rounded"
@@ -119,7 +119,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/Forgetbt"
+            android:id="@+id/forgetPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -127,10 +127,10 @@
             android:fontFamily="@font/ubuntu_light"
             android:text="Forgot Password?"
             android:textColor="@color/textColor1"
-            android:textSize="@dimen/_11ssp" />
+            android:textSize="@dimen/_12ssp" />
 
         <TextView
-            android:id="@+id/Signupbt"
+            android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -141,7 +141,7 @@
             android:textSize="@dimen/_12ssp" />
 
         <ProgressBar
-            android:id="@+id/pp"
+            android:id="@+id/progressBar"
             android:layout_gravity="center"
             style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/_30sdp"
