--- a/app/src/main/res/layout/fragment_user_drop_down_list.xml
+++ b/app/src/main/res/layout/fragment_user_drop_down_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/mainBack"
-    tools:context=".UserDropDownListFragment">
+    tools:context=".user.UserDropDownListFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
