--- a/app/src/main/res/drawable/yellow_fill_rounded.xml
+++ b/app/src/main/res/drawable/yellow_fill_rounded.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="@color/appTheme"/>
-    <corners android:radius="23dp"/>
+    <corners android:radius="@dimen/_75sdp"/>
 </shape>
