--- a/app/src/main/res/layout/activity_user_selected_hospital.xml
+++ b/app/src/main/res/layout/activity_user_selected_hospital.xml
@@ -6,113 +6,213 @@
     android:layout_height="match_parent"
     android:background="@color/mainBack"
     android:orientation="vertical"
+    android:weightSum="10"
     tools:context=".user.UserSelectedHospitalActivity">
 
-    <TextView
-        android:id="@+id/hospitalName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_30ssp"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="@drawable/yellow_bg"
+        android:layout_weight="6"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Facilites: "
-            android:textSize="@dimen/_20ssp"/>
-
-        <TextView
-            android:id="@+id/facilites"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_25ssp"/>
-
+            android:id="@+id/hospitalName"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_120sdp"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_20sdp"
+            android:text="Hospital"
+            android:gravity="center"
+            android:fontFamily="@font/ubuntu_bold"
+            android:textColor="@color/textColor1"
+            android:autoSizeTextType="uniform"/>
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_weight="4">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No Of Bed: "
-            android:textSize="@dimen/_20ssp"/>
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/_15sdp">
 
-        <TextView
-            android:id="@+id/bedCnt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_25ssp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Address: "
+                    android:fontFamily="@font/ubuntu_light"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_13ssp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:background="@drawable/yellow_rounded_corner"
+                    android:textSize="@dimen/_18ssp"
+                    android:textColor="@color/textColor1"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price(per Bed) Rs: "
-            android:textSize="@dimen/_20ssp"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/locateButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Locate"
+                    android:fontFamily="@font/ubuntu_light"
+                    android:background="@drawable/rounded_button"
+                    android:textSize="@dimen/_18ssp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"/>
 
-        <TextView
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_25ssp"/>
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="vertical">
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Contact No: "
+                    android:fontFamily="@font/ubuntu_light"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_13ssp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Addres: "
-            android:textSize="@dimen/_20ssp"/>
+                <TextView
+                    android:id="@+id/phoneNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:background="@drawable/yellow_rounded_corner"
+                    android:textSize="@dimen/_18ssp"
+                    android:textColor="@color/textColor1"/>
 
-        <TextView
-            android:id="@+id/Addres"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_25ssp"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/callButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Call Now"
+                    android:fontFamily="@font/ubuntu_light"
+                    android:background="@drawable/rounded_button"
+                    android:textSize="@dimen/_18ssp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"/>
 
+            </LinearLayout>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone No: "
-            android:textSize="@dimen/_20ssp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Facilities:"
+                    android:fontFamily="@font/ubuntu_light"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_13ssp"/>
 
-        <TextView
-            android:id="@+id/Phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_25ssp"/>
+                <TextView
+                    android:id="@+id/facilities"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:background="@drawable/yellow_rounded_corner"
+                    android:textSize="@dimen/_18ssp"
+                    android:textColor="@color/textColor1"/>
 
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Number of Beds:"
+                    android:fontFamily="@font/ubuntu_light"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_13ssp"/>
+
+                <TextView
+                    android:id="@+id/bedCnt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:background="@drawable/yellow_rounded_corner"
+                    android:textSize="@dimen/_18ssp"
+                    android:textColor="@color/textColor1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Price(per Night) of Bed:"
+                    android:fontFamily="@font/ubuntu_light"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_13ssp"/>
+
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:background="@drawable/yellow_rounded_corner"
+                    android:textSize="@dimen/_18ssp"
+                    android:textColor="@color/textColor1"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
