--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,12 @@
     <color name="white">#FFFFFFFF</color>
     <color name="appTheme">#ffc661</color>
     <color name="mainBack">#f8f8f8</color>
+    <color name="cardBack">#ececec</color>
+    <color name="splashFont1">#ffc661</color>
+    <color name="splashFont2">#929292</color>
+    <color name="splashFont3">#727272</color>
     <color name="textColor1">#2a2a2a</color>
+    <color name="textColor2">#555555</color>
+    <color name="textColor3">#7b7b7b</color>
     <color name="iconTint">#2a2a2a</color>
-    <color name="cardBack">@color/white</color>
 </resources>
